# Marinero-Localization

./: .gitignore  README.md  ok.txt
NCP_Target/: .cproject  .project  NCP_Target.pintool  NCP_Target.slcp  NCP_Target.slps
NCP_Target/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
NCP_Target/GNU ARM v12.2.1 - Default/: NCP_Target.hex  NCP_Target.map  NCP_Target.out  NCP_Target.s37  app.d  main.d  makefile  ncp_user_cmd.d  objects.mk  sources.mk  subdir.mk
NCP_Target/autogen/: .crc_config.crc  sl_component_catalog.h  sl_event_handler.c
NCP_Target/config/: pin_config.h  sl_bluetooth_advertiser_config.h  sl_bluetooth_config.h  sl_bluetooth_periodic_sync_config.h  sl_board_control_config.h  sl_bt_dynamic_gattdb_config.h  sl_ncp_config.h  sl_ncp_evt_filter_config.h  sl_rail_util_aox_config.h  sl_simple_com_config.h  sl_uartdrv_usart_vcom_config.h
SoC_Tag/: .cproject  .project  .projectlinkstore  SoC_Tag.pintool  SoC_Tag.slcp  SoC_Tag.slps  vscode.conf
SoC_Tag/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
SoC_Tag/GNU ARM v12.2.1 - Default/: SoC_Tag.axf  SoC_Tag.hex  SoC_Tag.map  SoC_Tag.out  SoC_Tag.s37  app.d  main.d  makefile  sl_gatt_service_device_information.d  sources.mk  subdir.mk
SoC_Tag/SoC_Tag_cmake/: CMakeLists.txt  CMakePresets.json  SoC_Tag.cmake  toolchain.cmake
SoC_Tag/autogen/: .crc_config.crc  gatt_db.c  gatt_db.h  (+3 more)
bt_beacon_cte/: .cproject  .project  .projectlinkstore  app.c  bt_beacon_cte.pintool  bt_beacon_cte.slcp  bt_beacon_cte.slps
marinero_ros2/src/marinero_detect/: CMakeLists.txt  package.xml
marinero_ros2/src/marinero_detect/src/: detect_closest.cpp
marinero_ros2/src/marinero_msgs/: CMakeLists.txt  package.xml
marinero_ros2/src/marinero_msgs/msg/: Aoa.msg
marinero_ros2/src/marinero_parse/: CMakeLists.txt  package.xml
marinero_ros2/src/marinero_parse/config/: config.yaml
marinero_ros2/src/marinero_parse/launch/: parser_launch.py
marinero_ros2/src/marinero_parse/src/: mqtt_parse.cpp  mqtt_parse_angle.cpp
marinero_ros2/src/marinero_test/: CMakeLists.txt  package.xml
marinero_ros2/src/marinero_test/src/: joystick_listener_node.cpp
outgoing/: v5_3f992c97-3d9a-455c-b929-09465ba4e400.1716557333587
soc_tag/: .cproject  .project  .projectlinkstore  soc_tag.slcp  soc_tag.slps
(+729 files in other folders)
